# enigma-python-mcp

./: .gitignore  CHANGELOG.md  Dockerfile  Dockerfile.debian  Dockerfile.glama  README.md  example_payload.json  glama.json  manifest-docker.json  manifest-python.json  manifest.json  pyproject.toml  requirements.txt  server.py  test.sh
.github/workflows/: publish.yml
src/enigmapython_mcp/: __init__.py  server.py
tests/: test_server.py
