[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "enigmapython-mcp"
version = "0.1.3"
description = "MCP server for historically accurate Enigma machine emulators"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
    { name = "Denis Maggiorotto" }
]
dependencies = [
    "mcp==1.3.0",
    "enigmapython==3.1.2",
    "pydantic==2.7.2"
]

[project.scripts]
enigmapython-mcp = "enigmapython_mcp.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/enigmapython_mcp"]
